# undertone

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.meta/: project-health.json
docs/plans/: 2026-02-05-speaksy-design.md  2026-02-09-godlike-upgrade.md
src/speaksy/: __init__.py  __main__.py  cli.py  config.py  core.py  runner.py  service.py  setup_wizard.py
src/undertone/: __init__.py  audio.py  cleanup.py  cli.py  config.py  core.py  engine.py  hotkeys.py  injection.py  learning.py  personalization.py  runner.py  service.py  setup_wizard.py  sounds.py  transcriber.py  tray.py
tests/: conftest.py  test_audio.py  test_cleanup.py  test_config.py  test_engine.py  test_hotkeys.py  test_injection.py  test_learning.py  test_personalization.py  test_service.py  test_sounds.py  test_transcriber.py
