[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speaksy"
version = "0.1.0"
description = "Voice typing for Linux. Talk it. Type it. Ship it."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "oneknight" }
]
keywords = ["voice", "typing", "dictation", "speech-to-text", "whisper", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing",
]
dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "pynput>=1.7.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "PyYAML>=6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/oneknight/speaksy"
Repository = "https://github.com/oneknight/speaksy"
Issues = "https://github.com/oneknight/speaksy/issues"

[project.scripts]
speaksy = "speaksy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/speaksy"]
